--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,63 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
+.my-element {
+    background: none;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 5px;
+    border: solid 1px rgba(255,255,255,255);
+    color: white;
+}
+.my-element:hover{
+    display: inline-block;
+    margin: 0 0.5rem;
+
+    animation: pulse; /* referring directly to the animation's @keyframe declaration */
+    animation-duration: 1s; /* don't forget to set a duration! */
+    color: white;
+    background: linear-gradient(45deg, rgba(77,182,173,0.5) 0%, rgba(128,0,48,0.5) 100%);
+    outline-color: black;
+}
+.anim:hover {
+    display: inline-block;
+    margin: 0 1rem;
+    animation: heartBeat; /* referring directly to the animation's @keyframe declaration */
+    animation-duration: 1s; /* don't forget to set a duration! */
+}
+.cuadro-login {
+    border-radius: 1rem;
+    box-shadow: 5px 5px 5px -1px rgba(0,0,0,0.2);
+    background-color: rgba(255,255,255,0.1);
+    backdrop-filter: blur(3px);
+    border: solid 1px rgba(255,255,255,0.3);
+    animation: fadeIn;
+    animation-duration: 3s;
+}
+.outlines {
+    outline-color: #dd3675 ;
+}
+.huella {
+    position: absolute;
+    height: 800px;
+    margin-top: 100px;
+    margin-left: -70px;
+    rotation: 45deg;
+}
+.segundo-cuadro {
+    background-color: rgba(255,255,255,0.1);
+    backdrop-filter: blur(3px);
+}
+.text-align {
+    text-align: justify;
+}
+.anim-cuadro {
+    animation: backInDown;
+    animation-duration: 1s;
+}
+.anim-cuadro2 {
+    animation: backInUp;
+    animation-duration: 1s;
+}
